[tool.poetry]
name = "signal-hack"
version = "0.1.0"
description = ""
authors = ["Fernando <66154723+fernandosmither@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.10"
signal-protocol = "^0.2.3"
numpy = "^2.0.1"
nltk = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
